Notes. Clean up.