@@ -4,153 +4,176 @@ import domain.bonds.Part2PartBond;
 import domain.parts.EppRegistryElementPart;
 import domain.versions.EppRegistryElement;
 import domain.versions.EppRegistryProfModule;
+import junitparams.JUnitParamsRunner;
+import junitparams.Parameters;
 import listener.IListenProfModules;
 import listener.Listener;
 import org.junit.*;
 import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-import org.junit.runners.Parameterized.*;
 
-import javax.validation.constraints.NotNull;
-import java.util.*;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.List;
+
+import static util.TestUtils.*;
 
 /**
  * @author Melton Smith
- * @since 01.12.2020
+ * @since 05.12.2020
  */
-@Deprecated
-@RunWith(Parameterized.class)
+@RunWith(JUnitParamsRunner.class)
 public class ListenerTest extends Assert {
 
-    private Collection<TestDataWrapper> testCases;
     private IListenProfModules listener;
 
-    public ListenerTest(Collection<TestDataWrapper> testCases) {
-        this.testCases = testCases;
+    private static List<TestDataWrapper> wrongDistributionData() {
+        return List.of(testCase2());
     }
 
-    @Parameters
-    public static Collection<Object[]> data(){
-        Collection<Object[]> params = new ArrayList<>();
-        params.add(new Object[] {List.of(testCase1())});
-        return params;
+    private static List<TestDataWrapper> wrongDistributionOrderData() {
+        return List.of(testCase1());
     }
 
-    @Test
-    public void onEventTest(){
-        testCases.forEach(testCase ->{
-            assertTrue(listener.onEvent(testCase.getProfModules(), testCase.getRegistryElements(), testCase.getMainBonds(), testCase.getPart2PartBonds()));
-        });
-    }
-
-
+    /**
+     * I expect "wrong distribution order" here because of
+     * the element with index 3 (Вложенное мероприятие 3) and  the element with index 2 (Вложенное мероприятие 2)
+     */
     public static TestDataWrapper testCase1(){
         List<EppRegistryProfModule> modules = new ArrayList<>() {{
-            add(new EppRegistryProfModule("Модуль 1", EppState.Forming));
-            add(new EppRegistryProfModule("Модуль 2", EppState.Archived));
+            add(new EppRegistryProfModule("Модуль 1", EppState.Accepted));
+        }};
+
+        //profModules
+        HashMap<EppRegistryProfModule, List<EppRegistryElementPart>> module2Parts = new HashMap<>(modules.size());
+
+        createParts(module2Parts, modules.get(0), 4);
+
+
+        //elements
+        HashMap<EppRegistryElement, List<EppRegistryElementPart>> elem2Parts = new HashMap<>(modules.size());
+        List<EppRegistryElement> eppRegistryElements = new ArrayList<>() {{
+            add(new EppRegistryElement("Вложенное мероприятие 0", EppState.Accepted));
+            add(new EppRegistryElement("Вложенное мероприятие 1", EppState.Accepted));
+            add(new EppRegistryElement("Вложенное мероприятие 2", EppState.Accepted));
+            add(new EppRegistryElement("Вложенное мероприятие 3", EppState.Accepted));
+        }};
+
+        //RegElements
+        createParts(elem2Parts, eppRegistryElements.get(0), 2);
+        createParts(elem2Parts, eppRegistryElements.get(1), 3);
+        createParts(elem2Parts, eppRegistryElements.get(2), 4);
+        createParts(elem2Parts, eppRegistryElements.get(3), 3);
+
+
+        //relations
+        Collection<MainBond> mainBonds = new ArrayList<>(modules.size());
+        HashMap<EppRegistryProfModule, Collection<EppRegistryElement>> moduleToRegElements = new HashMap<>(modules.size());
+        moduleToRegElements.put(modules.get(0), eppRegistryElements);
+
+
+        //module to its bonds
+        HashMap<EppRegistryProfModule, Collection<MainBond>> profModuleToBonds = new HashMap<>();
+
+        moduleToRegElements.forEach((profModule, collection) ->{
+            Collection<MainBond> mainBondsForModule = createMainBonds(profModule, collection);
+            profModuleToBonds.put(profModule, mainBondsForModule);
+            mainBonds.addAll(mainBondsForModule);
+        });
+
+        List<Part2PartBond> parts2Parts = new ArrayList<>();
+        parts2Parts.addAll(createPart2Part(modules.get(0), eppRegistryElements.get(0), module2Parts, elem2Parts, profModuleToBonds, "2/2", "1/1"));
+        parts2Parts.addAll(createPart2Part(modules.get(0), eppRegistryElements.get(1), module2Parts, elem2Parts, profModuleToBonds, "1/1", "2/2", "3/4"));
+        parts2Parts.addAll(createPart2Part(modules.get(0), eppRegistryElements.get(2), module2Parts, elem2Parts, profModuleToBonds, "1/4", "2/2", "3/3", "4/1"));
+        parts2Parts.addAll(createPart2Part(modules.get(0), eppRegistryElements.get(3), module2Parts, elem2Parts, profModuleToBonds, "1/2", "2/1", "3/4"));
+
+
+        return new TestDataWrapper(module2Parts, elem2Parts, parts2Parts, mainBonds);
+    }
+
+
+    /**
+     * TODO check when you have a module with 0 parts even not bounded with something.
+     * TODO Check when bounded(only MainBond) regElement has no parts.
+     * I expect "not all element parts are distributed" because of the element with index 7
+     */
+    public static TestDataWrapper testCase2(){
+        List<EppRegistryProfModule> modules = new ArrayList<>() {{
+            add(new EppRegistryProfModule("Модуль 1", EppState.Accepted));
+            add(new EppRegistryProfModule("Модуль 2", EppState.Accepted));
             add(new EppRegistryProfModule("Модуль 3", EppState.Accepted));
-            add(new EppRegistryProfModule("Модуль 4", EppState.Declined));
+            add(new EppRegistryProfModule("Модуль 4", EppState.Acceptable));
             add(new EppRegistryProfModule("Модуль 5", EppState.Acceptable));
         }};
 
         //profModules
         HashMap<EppRegistryProfModule, List<EppRegistryElementPart>> module2Parts = new HashMap<>(modules.size());
-        modules.forEach(module -> createParts(module2Parts, module));
+
+        createParts(module2Parts, modules.get(0), 4);
+        createParts(module2Parts, modules.get(1), 2);
+        createParts(module2Parts, modules.get(2), 3);
+        createParts(module2Parts, modules.get(3), 2);
+//        createParts(module2Parts, modules.get(4), 0);
 
         //elements
         HashMap<EppRegistryElement, List<EppRegistryElementPart>> elem2Parts = new HashMap<>(modules.size());
         List<EppRegistryElement> eppRegistryElements = new ArrayList<>() {{
-            add(new EppRegistryElement("Вложенное мероприятие 1", EppState.Forming));
-            add(new EppRegistryElement("Вложенное мероприятие 2", EppState.Archived));
-            add(new EppRegistryElement("Вложенное мероприятие 3", EppState.Acceptable));
-            add(new EppRegistryElement("Вложенное мероприятие 4", EppState.Acceptable));
-            add(new EppRegistryElement("Вложенное мероприятие 5", EppState.Forming));
-            add(new EppRegistryElement("Вложенное мероприятие 6", EppState.Declined));
-            add(new EppRegistryElement("Вложенное мероприятие 7", EppState.Acceptable));
+            add(new EppRegistryElement("Вложенное мероприятие 0", EppState.Forming));
+            add(new EppRegistryElement("Вложенное мероприятие 1", EppState.Archived));
+            add(new EppRegistryElement("Вложенное мероприятие 2", EppState.Acceptable));
+            add(new EppRegistryElement("Вложенное мероприятие 3", EppState.Accepted));
+            add(new EppRegistryElement("Вложенное мероприятие 4", EppState.Forming));
+            add(new EppRegistryElement("Вложенное мероприятие 5", EppState.Declined));
+            add(new EppRegistryElement("Вложенное мероприятие 6", EppState.Accepted));
+            add(new EppRegistryElement("Вложенное мероприятие 7", EppState.Accepted));
             add(new EppRegistryElement("Вложенное мероприятие 8", EppState.Accepted));
-            add(new EppRegistryElement("Вложенное мероприятие 9", EppState.Accepted));
-            add(new EppRegistryElement("Вложенное мероприятие 10", EppState.Declined));
+            add(new EppRegistryElement("Вложенное мероприятие 9", EppState.Declined));
+            add(new EppRegistryElement("Вложенное мероприятие 10", EppState.Accepted));
             add(new EppRegistryElement("Вложенное мероприятие 11", EppState.Accepted));
             add(new EppRegistryElement("Вложенное мероприятие 12", EppState.Accepted));
-            add(new EppRegistryElement("Вложенное мероприятие 13", EppState.Accepted));
         }};
 
         //RegElements
-        eppRegistryElements.forEach(eppRegistryElement -> createParts(elem2Parts, eppRegistryElement));
+        createParts(elem2Parts, eppRegistryElements.get(3), 0);
+        createParts(elem2Parts, eppRegistryElements.get(6), 2);
+        createParts(elem2Parts, eppRegistryElements.get(7), 4);
+        createParts(elem2Parts, eppRegistryElements.get(8), 0);
+
 
         //relations
         Collection<MainBond> mainBonds = new ArrayList<>(modules.size());
         HashMap<EppRegistryProfModule, Collection<EppRegistryElement>> moduleToRegElements = new HashMap<>(modules.size());
-        moduleToRegElements.put(modules.get(0), eppRegistryElements.subList(0, 3));
-        moduleToRegElements.put(modules.get(1), eppRegistryElements.subList(3, 6));
-        moduleToRegElements.put(modules.get(2), eppRegistryElements.subList(6, 9));
-        moduleToRegElements.put(modules.get(3), eppRegistryElements.subList(9, 13));
-        moduleToRegElements.put(modules.get(4),  Collections.emptyList());
+        moduleToRegElements.put(modules.get(1), List.of(eppRegistryElements.get(3)));
 
-        moduleToRegElements.forEach((id, collection) ->{
-            mainBonds.addAll(generateMainBonds(id, collection));
+        //module to its bonds
+        HashMap<EppRegistryProfModule, Collection<MainBond>> profModuleToBonds = new HashMap<>();
+
+        moduleToRegElements.forEach((profModule, collection) ->{
+            Collection<MainBond> mainBondsForModule = createMainBonds(profModule, collection);
+            profModuleToBonds.put(profModule, mainBondsForModule);
+            mainBonds.addAll(mainBondsForModule);
         });
 
-        //part2part relations (correct distributing)
-        Collection<Part2PartBond> parts2Parts = createParts2Parts(module2Parts, elem2Parts, mainBonds);
+        List<Part2PartBond> parts2Parts = new ArrayList<>();
+//        parts2Parts.addAll(createPart2Part(modules.get(0), eppRegistryElements.get(3), module2Parts, elem2Parts, profModuleToBonds, "1/2", "2/1"));
+//        parts2Parts.addAll(createPart2Part(modules.get(0), eppRegistryElements.get(6), module2Parts, elem2Parts, profModuleToBonds, "1/2", "2/3"));
 
         return new TestDataWrapper(module2Parts, elem2Parts, parts2Parts, mainBonds);
     }
 
-    /**
-     * Util
-     */
-    private static Collection<Part2PartBond> createParts2Parts(HashMap<EppRegistryProfModule, List<EppRegistryElementPart>> moduleId2Parts,
-                                                               HashMap<EppRegistryElement, List<EppRegistryElementPart>> elemId2Parts,
-                                                               Collection<MainBond> mainBonds) {
-        List<Part2PartBond> part2PartBonds = new ArrayList<>();
-        mainBonds.forEach(mainBond ->{
-            EppRegistryProfModule module = mainBond.getModule();
-            EppRegistryElement element = mainBond.getElement();
 
-            var eppRegistryElementParts = elemId2Parts.getOrDefault(element, Collections.emptyList());
-            var moduleParts = moduleId2Parts.getOrDefault(module, Collections.emptyList());
-
-            for (int i = 0; i < moduleParts.size(); i++) {
-                var modulePart = moduleParts.get(i);
-                if (i > eppRegistryElementParts.size()-1)
-                    continue;
-
-                var eppRegistryElementPart = eppRegistryElementParts.get(i);
-                part2PartBonds.add(new Part2PartBond(mainBond, modulePart, eppRegistryElementPart));
-
-            }
-        });
-        return part2PartBonds;
+    @Test
+    @Parameters(method = "wrongDistributionData")
+    public void wrongDistributionTest(TestDataWrapper testDataWrapper){
+        var illegalStateException = assertThrows(IllegalStateException.class, () -> listener.onEvent(testDataWrapper.getProfModules(), testDataWrapper.getRegistryElements(), testDataWrapper.getMainBonds(), testDataWrapper.getPart2PartBonds()));
+        assertEquals("Нельзя согласовать профмодуль Модуль 1, т.к. распределены не все части вложенных элементов.", illegalStateException.getMessage());
     }
 
-    /**
-     * Util
-     */
-    private static <T extends EppRegistryElement> void createParts(HashMap<T, List<EppRegistryElementPart>> regElemToParts, T regElement) {
-        Random rand = new Random();
-        int partsNumber = rand.nextInt(4);  //количество частей на каждый элемент реестра (проф модуль)
-        regElemToParts.put(regElement, new ArrayList<>());
-
-        for (int i = 0; i < partsNumber; i++) {
-            EppRegistryElementPart modulePart = new EppRegistryElementPart(regElement);
-            regElemToParts.get(regElement).add(modulePart);
-        }
-    }
-
-    /**
-     * Util
-     * do not use twice for a single profModule
-     */
-    private static Collection<MainBond> generateMainBonds(@NotNull EppRegistryProfModule module, @NotNull Collection<EppRegistryElement> eppRegistryElements){
-        AtomicInteger atomicInteger = new AtomicInteger(1);
-
-        return eppRegistryElements
-                .stream()
-                .map(regElement -> new MainBond(atomicInteger.getAndIncrement(), module, regElement))
-                .collect(Collectors.toList());
+    @Test
+    @Parameters(method = "wrongDistributionOrderData")
+    public void wrongDistributionOrderTest(TestDataWrapper testDataWrapper){
+        var illegalStateException = assertThrows(IllegalStateException.class, () -> listener.onEvent(testDataWrapper.getProfModules(), testDataWrapper.getRegistryElements(), testDataWrapper.getMainBonds(), testDataWrapper.getPart2PartBonds()));
+        assertEquals("Нельзя согласовать профмодуль Модуль 1, т.к. части вложенного мероприятия Вложенное мероприятие 2 распределены в неправильном порядке.", illegalStateException.getMessage());
     }
 
     @Before
@@ -161,7 +184,5 @@ public class ListenerTest extends Assert {
     @After
     public void endTest() {
         listener = null;
-        testCases = null;
     }
-
 }
